# sqloxide

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MANIFEST.in  build-wheels.sh  build.py  justfile  pyproject.toml  readme.md  setup.py  sqloxide.pyi
.github/: dependabot.yml
.github/workflows/: build-wheels.sh  build.yaml  ci.yml  pypi-release.yml
examples/: depgraph.py  visitor.py
sqloxide/: __init__.py  __init__.pyi
sqloxide_fork/: __init__.py
src/: lib.rs  visitor.rs
tests/: benchmark.py  test_mssql.py  test_sqloxide.py  test_stubs.py
