[package]
name = "sqloxide"
version = "0.1.54"
authors = ["Will Eaton <me@wseaton.com>"]
edition = "2021"

[lib]
name = "sqloxide"
crate-type = ["cdylib"]

[dependencies]
pythonize = "0.22"
serde = "1.0.171"

[dependencies.pyo3]
version = "0.22"
features = ["extension-module"]

[dependencies.sqlparser]
version = "0.54.0"
features = ["serde", "visitor"]
