[package]
name = "sqloxide"
version = "0.1.56"
authors = ["Will Eaton <me@wseaton.com>"]
edition = "2021"

[lib]
name = "sqloxide"
crate-type = ["cdylib"]

[dependencies]
pythonize = "0.28"
serde = "1"

[dependencies.pyo3]
version = "0.28"
features = ["extension-module"]

[dependencies.sqlparser]
version = "0.61"
features = ["serde", "visitor"]
