[project]
name = "sqloxide"
version = "0.1.56"
authors = [{ name = "Will Eaton", email= "<me@wseaton.com>" }]
repository = "https://github.com/wseaton/sqloxide"
license = "MIT"
description = "Python bindings for sqlparser-rs"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Topic :: Database",
    "License :: OSI Approved :: MIT License",
]

[dependency-groups]
dev = [
    # build
    "maturin",
    # test
    "pytest",
    "pytest-benchmark",
    "pytest-subtests",
    # benchmark
    "sqlglot",
    "sqlparse",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
